styles/code-title.less
// -------------
//   title tag
// -------------
.code-title {
  color: var(--text-color);
  background-color: rgba(120, 120, 120, 0.25);
  font-size: 100%;
  padding: 0 0.4rem;
  display: inline-block;
  height: 1.6rem;
  line-height: auto;
  border-radius: 3px 0 3px 0;
  margin-bottom: -1.6rem;
  display: table;
  position: relative;
  z-index: 2;
}

.code-title > * {
  background: none !important;
  padding: 0 !important;
  margin: 0;
}

.code-title > code:before, code:after {
  letter-spacing: -2rem !important;
}

// --------------
//   code block
// --------------
.with-title {
  padding-top: 1.6rem;
}

pre > div > code {
  font-size: 100% !important;
}

